Workload/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app: hello-app
spec:
  containers:
    - name: hello-container
      image: nginx:latest
      ports:
        - containerPort: 80
